--- a/main.ipynb
+++ b/main.ipynb
@@ -187,6 +187,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Initialize"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -202,6 +209,13 @@
     "\n",
     "\n",
     "x = m.addVars(number_of_exam, time_slot, name = \"x\", vtype=GRB.BINARY)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Objective Function"
    ]
   },
   {
@@ -272,6 +286,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Constraint: exam duration"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -280,6 +301,13 @@
     "# exam duration constraints\n",
     "m.addConstrs( ((x[i,j] * exam_time_hash_map[str(i)]) <= 3 for i in range(number_of_exam) for j in [0,3,6,9,12,15,16,19,22,25,28,31]), name=\"exam_duration_constraints\")\n",
     "m.addConstrs( ((x[i,j] * exam_time_hash_map[str(i)]) <= 2 for i in range(number_of_exam) for j in [1,2,4,5,7,8,10,11,13,14,17,18,20,21,23,24,26,27,29,30]), name=\"exam_duration_constraints\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Constraint: room capacity"
    ]
   },
   {
@@ -767,7 +795,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Special condition for data set 22"
+    "### Constraint: special condition"
    ]
   },
   {
@@ -777,48 +805,48 @@
    "outputs": [],
    "source": [
     "# Special condidition: these exam code not in 22 and 95\n",
-    "# if dataset == None:\n",
-    "#     m.addConstr(( x[exam_code_to_integer_hash_map[\"F321Q6E1\"], 13]+x[exam_code_to_integer_hash_map[\"F321Q6E1\"], 14]+ x[exam_code_to_integer_hash_map[\"F321Q6E1\"], 15] )==1, name = \"F321Q6E1 27th Jan\")\n",
+    "if dataset == None:\n",
+    "    m.addConstr(( x[exam_code_to_integer_hash_map[\"F321Q6E1\"], 13]+x[exam_code_to_integer_hash_map[\"F321Q6E1\"], 14]+ x[exam_code_to_integer_hash_map[\"F321Q6E1\"], 15] )==1, name = \"F321Q6E1 27th Jan\")\n",
     "\n",
-    "#     m.addConstr( (x[exam_code_to_integer_hash_map[\"F321T6E1\"], 20]+x[exam_code_to_integer_hash_map[\"F321T6E1\"], 21]+ x[exam_code_to_integer_hash_map[\"F321T6E1\"], 22] ) ==1, name = \"F321T6E1 30th Jan\")\n",
+    "    m.addConstr( (x[exam_code_to_integer_hash_map[\"F321T6E1\"], 20]+x[exam_code_to_integer_hash_map[\"F321T6E1\"], 21]+ x[exam_code_to_integer_hash_map[\"F321T6E1\"], 22] ) ==1, name = \"F321T6E1 30th Jan\")\n",
     "\n",
-    "#     m.addConstr(( x[exam_code_to_integer_hash_map[\"H21M01E1\"], 1]+x[exam_code_to_integer_hash_map[\"H21M01E1\"], 2]+ x[exam_code_to_integer_hash_map[\"H21M01E1\"], 3]+ x[exam_code_to_integer_hash_map[\"H21M01E1\"], 4]+x[exam_code_to_integer_hash_map[\"H21M01E1\"], 5]+x[exam_code_to_integer_hash_map[\"H21M01E1\"], 6] )==1, name = \"H21M01E1 23rd-24th Jan\")\n",
+    "    m.addConstr(( x[exam_code_to_integer_hash_map[\"H21M01E1\"], 1]+x[exam_code_to_integer_hash_map[\"H21M01E1\"], 2]+ x[exam_code_to_integer_hash_map[\"H21M01E1\"], 3]+ x[exam_code_to_integer_hash_map[\"H21M01E1\"], 4]+x[exam_code_to_integer_hash_map[\"H21M01E1\"], 5]+x[exam_code_to_integer_hash_map[\"H21M01E1\"], 6] )==1, name = \"H21M01E1 23rd-24th Jan\")\n",
     "\n",
-    "#     m.addConstr( (x[exam_code_to_integer_hash_map[\"H22M02E1\"], 1]+x[exam_code_to_integer_hash_map[\"H22M02E1\"], 4]+x[exam_code_to_integer_hash_map[\"H22M02E1\"], 2]+ x[exam_code_to_integer_hash_map[\"H22M02E1\"], 3]+x[exam_code_to_integer_hash_map[\"H22M02E1\"], 5]+x[exam_code_to_integer_hash_map[\"H22M02E1\"], 6] ) ==1, name = \"H22M02E1 23rd-24th Jan\")\n",
+    "    m.addConstr( (x[exam_code_to_integer_hash_map[\"H22M02E1\"], 1]+x[exam_code_to_integer_hash_map[\"H22M02E1\"], 4]+x[exam_code_to_integer_hash_map[\"H22M02E1\"], 2]+ x[exam_code_to_integer_hash_map[\"H22M02E1\"], 3]+x[exam_code_to_integer_hash_map[\"H22M02E1\"], 5]+x[exam_code_to_integer_hash_map[\"H22M02E1\"], 6] ) ==1, name = \"H22M02E1 23rd-24th Jan\")\n",
     "\n",
     "\n",
     "\n",
-    "#     m.addConstr((x[exam_code_to_integer_hash_map[\"H2CM04E1\"], 1]+x[exam_code_to_integer_hash_map[\"H2CM04E1\"], 4]+x[exam_code_to_integer_hash_map[\"H2CM04E1\"], 2]+ x[exam_code_to_integer_hash_map[\"H2CM04E1\"], 3]+x[exam_code_to_integer_hash_map[\"H2CM04E1\"], 5]+x[exam_code_to_integer_hash_map[\"H2CM04E1\"], 6] )==1, name = \"H2CM04E1 23rd-24th Jan\")\n",
+    "    m.addConstr((x[exam_code_to_integer_hash_map[\"H2CM04E1\"], 1]+x[exam_code_to_integer_hash_map[\"H2CM04E1\"], 4]+x[exam_code_to_integer_hash_map[\"H2CM04E1\"], 2]+ x[exam_code_to_integer_hash_map[\"H2CM04E1\"], 3]+x[exam_code_to_integer_hash_map[\"H2CM04E1\"], 5]+x[exam_code_to_integer_hash_map[\"H2CM04E1\"], 6] )==1, name = \"H2CM04E1 23rd-24th Jan\")\n",
     "\n",
-    "#     m.addConstr(  sum(  x[exam_code_to_integer_hash_map[\"G13RE2E1\"], k] for k in range(19)  )  == 1 , name = \"G13RE2E1  before 30th Jan\")\n",
-    "#     lst = [1,4,7,10,13,16,17,20,23,26,29,32]\n",
-    "#     m.addConstr(  sum(  x[exam_code_to_integer_hash_map[\"K1AHWAE2\"], k]  for k in range(len(lst))  )  == 1, name = \"K1AHWAE2  any am slot\")\n",
-    "#     m.addConstr(  sum(  x[exam_code_to_integer_hash_map[\"H63122E1\"], k]  for k in range(len(lst)) )  == 1 , name = \"H63122E1  any am slot\")\n",
-    "#     lst = [10,11,12,26,27,28]\n",
-    "#     m.addConstr(  sum(  x[exam_code_to_integer_hash_map[\"V13101E1\"], k]  for k in range(len(lst)) )  == 1 , name = \"V13101E1  any am slot\")\n",
+    "    m.addConstr(  sum(  x[exam_code_to_integer_hash_map[\"G13RE2E1\"], k] for k in range(19)  )  == 1 , name = \"G13RE2E1  before 30th Jan\")\n",
+    "    lst = [1,4,7,10,13,16,17,20,23,26,29,32]\n",
+    "    m.addConstr(  sum(  x[exam_code_to_integer_hash_map[\"K1AHWAE2\"], k]  for k in range(len(lst))  )  == 1, name = \"K1AHWAE2  any am slot\")\n",
+    "    m.addConstr(  sum(  x[exam_code_to_integer_hash_map[\"H63122E1\"], k]  for k in range(len(lst)) )  == 1 , name = \"H63122E1  any am slot\")\n",
+    "    lst = [10,11,12,26,27,28]\n",
+    "    m.addConstr(  sum(  x[exam_code_to_integer_hash_map[\"V13101E1\"], k]  for k in range(len(lst)) )  == 1 , name = \"V13101E1  any am slot\")\n",
     "\n",
-    "#     #F13P03E1 \\ before / F13X03E1#\n",
-    "#     for k in range(32):\n",
-    "#         for j in range(32):\n",
-    "#             if k < j:\n",
-    "#                 m.addConstr( ( x[exam_code_to_integer_hash_map[\"F13P03E1\"], k] * x[exam_code_to_integer_hash_map[\"F13X03E1\"], j]  <= 1   ))\n",
-    "#                 #print(str(k) + \"  \"+ str(j))\n",
+    "    #F13P03E1 \\ before / F13X03E1#\n",
+    "    for k in range(32):\n",
+    "        for j in range(32):\n",
+    "            if k < j:\n",
+    "                m.addConstr( ( x[exam_code_to_integer_hash_map[\"F13P03E1\"], k] * x[exam_code_to_integer_hash_map[\"F13X03E1\"], j]  <= 1   ))\n",
+    "                #print(str(k) + \"  \"+ str(j))\n",
     "\n",
-    "#     #F13P05E1 \\ before / F13X04E1#\n",
-    "#     for k in range(32):\n",
-    "#         for j in range(32):\n",
-    "#             if k < j:\n",
-    "#                 m.addConstr(( x[exam_code_to_integer_hash_map[\"F13P05E1\"], k] * x[exam_code_to_integer_hash_map[\"F13X04E1#\"], j]   <= 1  ))\n",
+    "    #F13P05E1 \\ before / F13X04E1#\n",
+    "    for k in range(32):\n",
+    "        for j in range(32):\n",
+    "            if k < j:\n",
+    "                m.addConstr(( x[exam_code_to_integer_hash_map[\"F13P05E1\"], k] * x[exam_code_to_integer_hash_map[\"F13X04E1#\"], j]   <= 1  ))\n",
     "                \n",
-    "#     #H3BFM2E1  must be immediately followed by  H3BFM2E2#\n",
-    "#     for k in range(31):\n",
-    "#         m.addConstr(  (x[exam_code_to_integer_hash_map[\"H3BFM2E1\"], k] * x[exam_code_to_integer_hash_map[\"H3BFM2E2\"], k+1]    <= 1 ))\n",
+    "    #H3BFM2E1  must be immediately followed by  H3BFM2E2#\n",
+    "    for k in range(31):\n",
+    "        m.addConstr(  (x[exam_code_to_integer_hash_map[\"H3BFM2E1\"], k] * x[exam_code_to_integer_hash_map[\"H3BFM2E2\"], k+1]    <= 1 ))\n",
     "\n",
-    "#     #H8B040E1 must be at different times H8C001E1#\n",
-    "#     for k in range(32):\n",
-    "#         for j in range(32):\n",
-    "#             if k != j:\n",
-    "#                 m.addConstr( ( x[exam_code_to_integer_hash_map[\"H8B040E1\"], k] * x[exam_code_to_integer_hash_map[\"H8C001E1\"], j]   <= 1  ))"
+    "    #H8B040E1 must be at different times H8C001E1#\n",
+    "    for k in range(32):\n",
+    "        for j in range(32):\n",
+    "            if k != j:\n",
+    "                m.addConstr( ( x[exam_code_to_integer_hash_map[\"H8B040E1\"], k] * x[exam_code_to_integer_hash_map[\"H8C001E1\"], j]   <= 1  ))"
    ]
   },
   {
